2005-03-30  T Rowley  <tim.rowley@gmail.com>

	* src/cairo-gstate.c (_cairo_gstate_stroke_extents): call
	_cairo_pen_init so that the result takes into account the caps.

2005-03-29  T Rowley  <tim.rowley@gmail.com>

	* src/cairo-xlib.h: include Xlib.h to fix solaris build bustage.

2005-03-29  T Rowley  <tim.rowley@gmail.com>

	* src/cairo-wideint.h: add preprocessor tests for stdint.h/inttypes.h

	* src/cairoint.h: add preprocessor tests for stdint.h/inttypes.h

2005-03-29  T Rowley  <tim.rowley@gmail.com>

	* configure.in: re-enable quartz backend

	* src/cairo-quartz-surface.c: update to compilable/workable version

	* src/cairo-atsui-font.c: update to compilable/workable version

2005-03-29  Carl Worth  <cworth@cworth.org>

	* test/Makefile.am:
	* test/*_*.c: More _/- renames in the test directory.

2005-03-28  Carl Worth  <cworth@cworth.org>

	* src/Makefile.am:
	* src/cairo_*.c: Renamed a bunch of files to use - rather than _
	as a separator. Copy happened in the master repository to preserve
	history, so this is just a big remove.

2005-03-28  Carl Worth  <cworth@cworth.org>

	* TODO: Sorted API shakeup chart.

2005-03-28  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-png.c (cairo_image_surface_write_png) 
	(cairo_image_surface_create_from_png): New PNG utility functions.

	* src/cairo_pdf_surface.c, src/cairo-pdf.h: Reverse the naming of
	the pdf constructors so the callback based ones have the long
	names.

2005-03-25  Jamey Sharp  <jamey@minilop.net>

	* src/cairo-xcb.h:
	* src/cairo_xcb_surface.c:
	Fix "implicit declaration" warning in cairo.c by moving
	cairo_xcb_surface_create prototype into cairo-xcb.h.

2005-03-23  Carl Worth  <cworth@cworth.org>

	* src/cairo-path-fixed-private.h:
	* src/cairo_path.c: Clean up names of cairo_path internals.

2005-03-23  Carl Worth  <cworth@cworth.org>

	* src/cairo_path_fill.c: 
	* src/cairo_path_stroke.c: Remove unneeded includes of
	cairo-path-fixed-private.h.
